--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ input {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  display: none;
 }
 input:focus {
   background-color: white;
