--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ li {
   color: #060606;
   height: 40px;
   line-height: 40px;
+  cursor: default;
 }
 li:nth-child(2n) {
   background-color: #f7f7f7;
@@ -67,6 +68,9 @@ input:focus {
 .done {
   text-decoration: line-through;
   color: gray;
+}
+.fa{
+  cursor: pointer;
 }
 .fa-plus {
   float: right;
